// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddActionOrIfStatement component should render 1`] = `
<span
  class=""
  style="display: flex; min-height: 32px; align-items: center;"
>
  <div
    class="AddActionOrIfStatement btn-group"
    style="padding-left: 38px;"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="ControlStructureButton dropdown-toggle btn btn-secondary"
      type="button"
    >
      THEN
    </button>
    <div
      aria-hidden="true"
      class="dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Action
      </button>
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        "IF" statement
      </button>
    </div>
  </div>
</span>
`;

exports[`AddActionOrIfStatement component should render a button to delete the block when it is allowed to delete itself 1`] = `
<span
  class=""
  style="display: flex; min-height: 32px; align-items: center;"
>
  <div
    class="AddActionOrIfStatement btn-group"
    style="padding-left: 38px;"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="ControlStructureButton dropdown-toggle btn btn-secondary"
      type="button"
    >
      THEN
    </button>
    <div
      aria-hidden="true"
      class="dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Action
      </button>
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        "IF" statement
      </button>
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <i
          class="material-icons red mr-1"
        >
          delete
        </i>
        Delete node
      </button>
    </div>
  </div>
</span>
`;

exports[`AddActionOrIfStatement component should render with error 1`] = `
<span
  class=""
  style="display: flex; min-height: 32px; align-items: center;"
>
  <div
    class="AddActionOrIfStatement btn-group"
    style="padding-left: 38px;"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="ControlStructureButton dropdown-toggle btn btn-secondary"
      type="button"
    >
      THEN
    </button>
    <div
      class="d-inline-block text-danger ml-2"
    >
      THEN
       cannot be empty
    </div>
    <div
      aria-hidden="true"
      class="dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Action
      </button>
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        "IF" statement
      </button>
    </div>
  </div>
</span>
`;
